fix(Widget): remove field padding to align the value text and label

--- a/src/app/widget/components/input-field/input-field.component.scss
+++ b/src/app/widget/components/input-field/input-field.component.scss
@@ -6,7 +6,6 @@
 
 .input-field {
   @apply w-full;
-  @apply pl-1;
   @apply flex-grow;
   @apply appearance-none;
   @apply outline-none;
